force-app/main/default/objects/Tree_Asset__c/Tree_Asset__c.object-meta.xml
<CustomObject>
    <description>Represents perennial tree assets (e.g., fruit trees, nut trees) planted in farm beds.</description>
    <label>Tree Asset</label>
    <nameField>
        <label>Tree Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tree Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>