force-app/main/default/objects/Tree_Asset__c/fields/Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Age_Years__c</fullName>
    <formula>IF(ISBLANK(Planting_Date__c), NULL, (TODAY() - Planting_Date__c) / 365)</formula>
    <label>Age (Years)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>