force-app/main/default/objects/Tree_Asset__c/fields/Farm_Bed__c.field-meta.xml
<CustomField>
    <fullName>Farm_Bed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farm Bed</label>
    <referenceTo>Farm_Bed__c</referenceTo>
    <relationshipLabel>Tree Assets</relationshipLabel>
    <relationshipName>Tree_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>