force-app/main/default/objects/Tree_Asset__c/fields/Last_Pruning_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pruning_Date__c</fullName>
    <label>Last Pruning Date</label>
    <type>Date</type>
</CustomField>