force-app/main/default/objects/Tree_Asset__c/fields/Location_Row_Column__c.field-meta.xml
<CustomField>
    <fullName>Location_Row_Column__c</fullName>
    <label>Location (Row/Column)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>