force-app/main/default/objects/Tree_Asset__c/fields/Producing_Status__c.field-meta.xml
<CustomField>
    <fullName>Producing_Status__c</fullName>
    <label>Producing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Producing</fullName>
            </value>
            <value>
                <fullName>Not Yet Producing</fullName>
                <default>true</default>
                <label>Not Yet Producing</label>
            </value>
            <value>
                <fullName>Early Production</fullName>
            </value>
            <value>
                <fullName>Peak Production</fullName>
            </value>
            <value>
                <fullName>Declining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>