force-app/main/default/objects/Tree_Asset__c/fields/Tree_Type__c.field-meta.xml
<CustomField>
    <fullName>Tree_Type__c</fullName>
    <label>Tree Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fruit</fullName>
            </value>
            <value>
                <fullName>Timber</fullName>
            </value>
            <value>
                <fullName>Shade</fullName>
            </value>
            <value>
                <fullName>Medicinal</fullName>
            </value>
            <value>
                <fullName>Coconut</fullName>
            </value>
            <value>
                <fullName>Mango</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>